docs(claude): track caffeine sun.misc.Unsafe risk in upgrade backlog
ApacheDS AM27 pulls caffeine 2.9.3 transitively, which calls
terminally-deprecated sun.misc.Unsafe memory methods (JDK 24+ warns).
Harmless today; a future JDK removing those methods would break ApacheDS
at boot. Recorded as a low-priority, upstream-blocked watch item with a
named trigger and interim mitigation, per backlog-hygiene rules.